Classifier bug solved

--- a/Diabetes_Test.ipynb
+++ b/Diabetes_Test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzPVUX4J08oHhSEgas/Yqo",
+      "authorship_tag": "ABX9TyMrEKl+DhiAvK8LjTa8k06Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "gcO7HXEi3RLR"
       },
@@ -76,18 +76,18 @@
       "metadata": {
         "id": "jfpBDACv7e3q"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#pd.read_csv?"
+        "pd.read_csv?"
       ],
       "metadata": {
         "id": "V1eym9hY9GUB"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
           "height": 270
         },
         "id": "dZOohHga9QMl",
-        "outputId": "5317558e-37b7-4732-f31c-b7c33974fe70"
+        "outputId": "224acb3e-ca3d-4eda-d984-317bd979a46e"
       },
       "execution_count": 8,
       "outputs": [
@@ -126,7 +126,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2bf7eb55-9a5a-4af7-ac79-4c176dbc7acc\">\n",
+              "  <div id=\"df-6a8cfa4a-3811-4c94-b014-b3f89f3d61a1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -221,7 +221,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bf7eb55-9a5a-4af7-ac79-4c176dbc7acc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6a8cfa4a-3811-4c94-b014-b3f89f3d61a1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -272,12 +272,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2bf7eb55-9a5a-4af7-ac79-4c176dbc7acc button.colab-df-convert');\n",
+              "          document.querySelector('#df-6a8cfa4a-3811-4c94-b014-b3f89f3d61a1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2bf7eb55-9a5a-4af7-ac79-4c176dbc7acc');\n",
+              "          const element = document.querySelector('#df-6a8cfa4a-3811-4c94-b014-b3f89f3d61a1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -315,7 +315,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q3Wvgrmu-IN4",
-        "outputId": "cdc89d7c-baa0-46da-944f-48e81c6fc9d5"
+        "outputId": "9b21420a-2841-407f-c99e-6a09c4b8c76b"
       },
       "execution_count": 9,
       "outputs": [
@@ -344,7 +344,7 @@
           "height": 364
         },
         "id": "9Mb_p4XY-0e8",
-        "outputId": "26d2df52-c944-4ce9-bc07-ac8266a220e0"
+        "outputId": "905fae34-1cb9-4249-a511-d072f36b8124"
       },
       "execution_count": 10,
       "outputs": [
@@ -374,7 +374,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9006929f-9ace-4367-9770-5dd0c9e9dba5\">\n",
+              "  <div id=\"df-a4347119-0bf0-476a-b468-23aa692d89e1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -505,7 +505,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9006929f-9ace-4367-9770-5dd0c9e9dba5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4347119-0bf0-476a-b468-23aa692d89e1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -556,12 +556,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9006929f-9ace-4367-9770-5dd0c9e9dba5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a4347119-0bf0-476a-b468-23aa692d89e1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9006929f-9ace-4367-9770-5dd0c9e9dba5');\n",
+              "          const element = document.querySelector('#df-a4347119-0bf0-476a-b468-23aa692d89e1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -600,9 +600,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ivG9hcF_JnD",
-        "outputId": "98078b1d-e5b4-4125-8f25-a18a1211a0f7"
+        "outputId": "491a646e-76a8-41c1-bbcf-9210db1f6c36"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +614,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -629,9 +629,9 @@
           "height": 207
         },
         "id": "5nHrmY8V_rv_",
-        "outputId": "ccbbf4d6-9d1c-40c8-d223-4aeeef75293b"
+        "outputId": "7b99db98-f782-4783-c83d-cc7799728aec"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +649,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-46175921-aec0-43de-aced-be16c802ffcc\">\n",
+              "  <div id=\"df-2096e29c-9ae9-4974-bbfd-4474af2f2020\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -716,7 +716,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46175921-aec0-43de-aced-be16c802ffcc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2096e29c-9ae9-4974-bbfd-4474af2f2020')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -767,12 +767,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-46175921-aec0-43de-aced-be16c802ffcc button.colab-df-convert');\n",
+              "          document.querySelector('#df-2096e29c-9ae9-4974-bbfd-4474af2f2020 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-46175921-aec0-43de-aced-be16c802ffcc');\n",
+              "          const element = document.querySelector('#df-2096e29c-9ae9-4974-bbfd-4474af2f2020');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -795,7 +795,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -810,7 +810,7 @@
       "metadata": {
         "id": "9ZEQUs73AMs8"
       },
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -823,9 +823,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V-68BJ2pC1tB",
-        "outputId": "53583d62-37b1-406e-ae0c-bcc98e86d57e"
+        "outputId": "7c538ee3-ec23-4aae-e6b1-caf60d7b68fd"
       },
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,9 +872,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "beOGGcNqDtiG",
-        "outputId": "8c7eeb4e-f2e0-46a6-a47e-2a97fdc63b91"
+        "outputId": "d2179d64-884e-425e-ca6c-ddb29938699d"
       },
-      "execution_count": 19,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
       "metadata": {
         "id": "4Uma2X_zDxI_"
       },
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -926,9 +926,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8B_WjnBxES0m",
-        "outputId": "2c5cc31f-c973-4704-ee9b-2fd76236d91a"
+        "outputId": "38a02174-d07f-4e7e-86ee-92184898441a"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,7 +938,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 18
         }
       ]
     },
@@ -950,7 +950,7 @@
       "metadata": {
         "id": "4rj-1usZERwD"
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -963,9 +963,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O2uRNS_EEfUj",
-        "outputId": "e49ffffe-bf7c-411e-b6f8-1ae079911e52"
+        "outputId": "5f672061-c7fc-4f15-b56e-daf87f4317de"
       },
-      "execution_count": 25,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -996,7 +996,7 @@
       "metadata": {
         "id": "9pVeSiACFCFv"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1006,10 +1006,46 @@
         "print(Y) # Y '' the model / labels"
       ],
       "metadata": {
-        "id": "iq8GjUICFB1p"
+        "id": "iq8GjUICFB1p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "caeebc7c-631f-4323-8064-015a70e4905d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.63994726  0.84832379  0.14964075 ...  0.20401277  0.46849198\n",
+            "   1.4259954 ]\n",
+            " [-0.84488505 -1.12339636 -0.16054575 ... -0.68442195 -0.36506078\n",
+            "  -0.19067191]\n",
+            " [ 1.23388019  1.94372388 -0.26394125 ... -1.10325546  0.60439732\n",
+            "  -0.10558415]\n",
+            " ...\n",
+            " [ 0.3429808   0.00330087  0.14964075 ... -0.73518964 -0.68519336\n",
+            "  -0.27575966]\n",
+            " [-0.84488505  0.1597866  -0.47073225 ... -0.24020459 -0.37110101\n",
+            "   1.17073215]\n",
+            " [-0.84488505 -0.8730192   0.04624525 ... -0.20212881 -0.47378505\n",
+            "  -0.87137393]]\n",
+            "0      1\n",
+            "1      0\n",
+            "2      1\n",
+            "3      0\n",
+            "4      1\n",
+            "      ..\n",
+            "763    0\n",
+            "764    0\n",
+            "765    0\n",
+            "766    1\n",
+            "767    0\n",
+            "Name: Outcome, Length: 768, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1036,7 +1072,7 @@
       "metadata": {
         "id": "meLTWD7_GUDk"
       },
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1049,9 +1085,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8CvnYU2yPTI9",
-        "outputId": "1298ce5c-c75d-4501-da1f-53f523505033"
+        "outputId": "4a4bbdba-b5ca-4a7f-e531-51dc06197d09"
       },
-      "execution_count": 28,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1079,7 +1115,7 @@
       "metadata": {
         "id": "AuPbTKqvPdYz"
       },
-      "execution_count": 29,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1094,9 +1130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LN3YrIQMPqIf",
-        "outputId": "e9e2426b-c31b-49f5-a474-6d41ddc2fb6b"
+        "outputId": "3e7619eb-9538-41f2-be0c-cbab66abe703"
       },
-      "execution_count": 61,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,7 +1142,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 28
         }
       ]
     },
@@ -1129,7 +1165,7 @@
       "metadata": {
         "id": "V9gxKuMXQCHi"
       },
-      "execution_count": 33,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1142,15 +1178,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t4FMgId5RKr8",
-        "outputId": "83576fce-f80c-42c6-ba49-e9faae506bc0"
+        "outputId": "9f2a5857-356c-4bd9-a010-1ebc9e742230"
       },
-      "execution_count": 36,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy score of Training Data : 0.7833876221498371\n"
+            "Accuracy score of Training Data : 0.7866449511400652\n"
           ]
         }
       ]
@@ -1168,13 +1204,13 @@
       "cell_type": "code",
       "source": [
         "X_test_prediction = classifier.predict(X_test)\n",
-        "# compring the predictions w/ the Y-test data\n",
+        "# comparing the predictions w/ the Y-test data\n",
         "test_data_accuracy = accuracy_score(X_test_prediction,Y_test)"
       ],
       "metadata": {
         "id": "dybCJ1oKRd5b"
       },
-      "execution_count": 37,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1187,9 +1223,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E5OAxcE4SBjK",
-        "outputId": "e8136770-6ec0-4305-b960-d7de7f26eccd"
+        "outputId": "228111f4-1b04-481f-9d5f-0986b21d9f76"
       },
-      "execution_count": 38,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1239,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input_data = (5,166,72,19,175,25.8,0.587,51)\n",
+        "input_data = (7,196,90,0,0,39.8,0.451,41)\n",
         "\n",
         "# changing the input_data to numpy array\n",
         "input_data_as_numpy_array = np.asarray(input_data)\n",
@@ -1218,35 +1254,35 @@
         "prediction = classifier.predict(std_data)\n",
         "print(prediction)\n",
         "\n",
-        "if (prediction[0] == 0):\n",
-        "  print('The person is not diabetic')\n",
+        "if (prediction[0] == 1):\n",
+        "  print('The person is diabetic.')\n",
         "else:\n",
-        "  print('The person is diabetic')"
+        "  print('The person is not diabetic.')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "es5OrV1sZ2Ag",
-        "outputId": "d1dc57f6-60de-4dec-8f97-f5c739b5e805"
+        "outputId": "a4a7f346-b00e-4cb1-b54f-18f4e82d2e9f"
       },
-      "execution_count": 64,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-5.00e+00 -2.00e+00 -2.00e+00  1.90e+01  1.75e+02 -1.22e+01  5.00e-02\n",
-            "   1.70e+01]]\n",
-            "[0]\n",
-            "The person is not diabetic\n"
+            "[[ 0.93691372  2.35058677  1.08020025 -1.28821221 -0.69289057  0.99091209\n",
+            "  -0.06304891  0.66020563]]\n",
+            "[1]\n",
+            "The person is diabetic\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:451: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:451: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
             "  \"X does not have valid feature names, but\"\n"
           ]
         }
