SKLearn warning "valid feature names" resolved

--- a/Diabetes_Test.ipynb
+++ b/Diabetes_Test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrEKl+DhiAvK8LjTa8k06Q",
+      "authorship_tag": "ABX9TyPcGYAg6pFSCjiEJgBJJ4nI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -913,7 +913,7 @@
       "metadata": {
         "id": "4Uma2X_zDxI_"
       },
-      "execution_count": 17,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -926,9 +926,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8B_WjnBxES0m",
-        "outputId": "38a02174-d07f-4e7e-86ee-92184898441a"
+        "outputId": "178acaa3-6a08-49f0-e96a-19e351d3d57a"
       },
-      "execution_count": 18,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,34 +938,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 49
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "standard_data = scaler.transform(X) # fit and tranform using a single function"
+        "standardized_data = scaler.transform(X) # fit and tranform using a single function"
       ],
       "metadata": {
         "id": "4rj-1usZERwD"
       },
-      "execution_count": 19,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(standard_data)"
+        "print(standardized_data)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O2uRNS_EEfUj",
-        "outputId": "5f672061-c7fc-4f15-b56e-daf87f4317de"
+        "outputId": "938629eb-2764-4eff-8649-e6179027106e"
       },
-      "execution_count": 20,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,12 +991,12 @@
     {
       "cell_type": "code",
       "source": [
-        "X= standard_data"
+        "X= standardized_data"
       ],
       "metadata": {
         "id": "9pVeSiACFCFv"
       },
-      "execution_count": 21,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1010,9 +1010,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "caeebc7c-631f-4323-8064-015a70e4905d"
+        "outputId": "248a9501-d19a-461a-eaad-09377703cb93"
       },
-      "execution_count": 23,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1072,7 @@
       "metadata": {
         "id": "meLTWD7_GUDk"
       },
-      "execution_count": 24,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -1085,9 +1085,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8CvnYU2yPTI9",
-        "outputId": "4a4bbdba-b5ca-4a7f-e531-51dc06197d09"
+        "outputId": "202cde48-ea41-401d-b270-e1255941aaff"
       },
-      "execution_count": 25,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -1115,7 +1115,7 @@
       "metadata": {
         "id": "AuPbTKqvPdYz"
       },
-      "execution_count": 26,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1130,9 +1130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LN3YrIQMPqIf",
-        "outputId": "3e7619eb-9538-41f2-be0c-cbab66abe703"
+        "outputId": "92db41e8-e30a-474c-bb47-dc56bdad3af9"
       },
-      "execution_count": 28,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1142,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 57
         }
       ]
     },
@@ -1165,7 +1165,7 @@
       "metadata": {
         "id": "V9gxKuMXQCHi"
       },
-      "execution_count": 29,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1178,9 +1178,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t4FMgId5RKr8",
-        "outputId": "9f2a5857-356c-4bd9-a010-1ebc9e742230"
+        "outputId": "3d5804fd-76f4-4dd7-d0c3-e6a9fa74f547"
       },
-      "execution_count": 30,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -1210,7 +1210,7 @@
       "metadata": {
         "id": "dybCJ1oKRd5b"
       },
-      "execution_count": 31,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -1223,9 +1223,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E5OAxcE4SBjK",
-        "outputId": "228111f4-1b04-481f-9d5f-0986b21d9f76"
+        "outputId": "1e4f32ce-0d2c-4031-8adc-a2a9c01b696f"
       },
-      "execution_count": 32,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,26 +1264,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "es5OrV1sZ2Ag",
-        "outputId": "a4a7f346-b00e-4cb1-b54f-18f4e82d2e9f"
+        "outputId": "a7b5c482-b3b1-4fcf-82de-198661e8b3a4"
       },
-      "execution_count": 35,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.93691372  2.35058677  1.08020025 -1.28821221 -0.69289057  0.99091209\n",
-            "  -0.06304891  0.66020563]]\n",
+            "[[ 7.00000000e+00  1.96000000e+02  9.00000000e+01 -1.00613962e-16\n",
+            "   3.00685403e-17  3.98000000e+01  4.51000000e-01  4.10000000e+01]]\n",
             "[1]\n",
-            "The person is diabetic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:451: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-            "  \"X does not have valid feature names, but\"\n"
+            "The person is diabetic.\n"
           ]
         }
       ]
